# model-checking

./: .gitignore  ModelChecking.cabal  README.md  model-checking.cabal
src/: FairDiscreteSystem.hs  FirstOrderLogic.hs  KripkeStructure.hs  Main.hs  PropositionalLogic.hs  fair_discrete_system.hs  propositional_logic.hs
test/: FairDiscreteSystemTest.hs  KripkeStructureTest.hs  Main.hs
